vlib/v/checker/tests/globals/name_conflict_with_const.out
vlib/v/checker/tests/globals/name_conflict_with_const.vv:3:10: error: duplicate global and const `foo`
    1 | const foo = 'abc'
    2 | 
    3 | __global foo = 123
      |          ~~~
